--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = 
-	ESP32Servo
+monitor_speed = 115200
+lib_deps =
+  adafruit/Adafruit NeoPixel@^1.12.0
+  ESP32Servo
